<resources>
    <string name="app_name">Android OnBoarding</string>

    <!--MainActivity-->
    <string name="enforcement">Enforcement</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="tap_to_login_with">Tap to Login with</string>
    <string name="face_id">Face ID</string>

    <!--LoginActivity-->
    <string name="validating">"Validating…"</string>
</resources>