<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.onboarding.viewmodel.ActivityMainViewModel" />

        <variable
            name="clickHandler"
            type="android.view.View.OnClickListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.activity.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_15sdp">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="@dimen/_203sdp"
                android:background="@drawable/ic_rectangle_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_36sdp"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_29sdp"
                android:fontFamily="@font/poppins"
                android:gravity="center_horizontal"
                android:text="@string/enforcement"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="@dimen/_15sdp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_48sdp"
                android:alpha="0.7"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email_id"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editEmail"
                style="@style/Widget.AppCompat.EditText.LoginText"
                android:layout_marginTop="@dimen/_3sdp"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.txtEmail}"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/txtEmail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:alpha="0.7"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/editEmail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editPassword"
                style="@style/Widget.AppCompat.EditText.LoginText"
                android:layout_marginTop="@dimen/_3sdp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewModel.txtppassword}"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/txtPassword" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_icon_show_password"
                app:layout_constraintBottom_toBottomOf="@id/editPassword"
                app:layout_constraintEnd_toEndOf="@id/editPassword"
                app:layout_constraintTop_toTopOf="@id/editPassword" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:button="@drawable/ic_icon_checkbox_normal"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_3sdp"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/editPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/editPassword" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnLogin"
                style="@style/ProgressButton"
                android:layout_marginTop="@dimen/_30sdp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{clickHandler::onClick}"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/txtForgotPassword" />

            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_38sdp"
                android:alpha="0.3"
                android:background="@color/light_gray"
                app:layout_constraintEnd_toStartOf="@id/txtOr"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textColor="#ffffff"
                android:textSize="12.5sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toStartOf="@id/divider2"
                app:layout_constraintStart_toEndOf="@id/divider1"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_38sdp"
                android:alpha="0.3"
                android:background="@color/light_gray"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@id/txtOr"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <View
                android:id="@+id/faceBlock"
                android:layout_width="0dp"
                android:layout_height="@dimen/_132sdp"
                android:layout_marginTop="@dimen/_26sdp"
                android:background="@drawable/face_background"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/txtOr" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgFace"
                android:layout_width="@dimen/_57sdp"
                android:layout_height="@dimen/_57sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:src="@drawable/ic_face_icon"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="@id/faceBlock" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTapToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:alpha="0.7"
                android:fontFamily="@font/poppins"
                android:text="@string/tap_to_login_with"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="normal"
                app:layout_constraintEnd_toStartOf="@id/txtFaceId"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/imgFace" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtFaceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/face_id"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@id/txtTapToLogin"
                app:layout_constraintTop_toBottomOf="@id/imgFace" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>